--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,12 @@
 
 /* Your CSS Code here. */
-main{
+.main{
 	width:200px;
 	background-color:purple;
 	border-left:green solid 5px;
 	padding:10px;
 }
-.heading{
+#heading{
 	font-size:20px;
 	color:white;
 	text-decoration:underline;
